--- a/DOM/one.html
+++ b/DOM/one.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> // it sohw it is a html file and it is a document model
 <html lang="en">
 
 <head>
@@ -9,7 +9,10 @@
 <h1>DOM learning</h1>
 
 <body>
-
+    <div class="bg-black">
+        <h1 class="heading">DOM learning on youtube</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, expedita a voluptates error ipsum odio deleniti fugiat eum maiores consequuntur saepe dolore nam cumque. Architecto facilis laboriosam quibusdam magni! Ex!</p>
+    </div>
 </body>
 
 </html>
