--- a/DOM/one.html
+++ b/DOM/one.html
@@ -1,17 +1,34 @@
-<!DOCTYPE html> // it sohw it is a html file and it is a document model
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
 
     <title>DOM Learning</title>
+    <style>
+        .bg-black {
+            background-color: black;
+            color: rgb(185, 183, 187);
+        }
+    </style>
 </head>
-<h1>DOM learning</h1>
 
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM learning on youtube</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, expedita a voluptates error ipsum odio deleniti fugiat eum maiores consequuntur saepe dolore nam cumque. Architecto facilis laboriosam quibusdam magni! Ex!</p>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <h1 id="title" class="heading">DOM learning on youtube</h1>
+        <p id="par">Lorem ipsum dolor sit amet consectetur,
+            <spam style=" display: none; ">adipisicing elit. Facilis, expedita</spam> a voluptates error ipsum odio deleniti fugiat eum maiores consequuntur saepe dolore nam cumque. Architecto facilis laboriosam quibusdam magni! Ex!</p>
+        <ul>
+            <list class="myClass">hello evryOne i am learning Document Object Model on you tube</list>
+            <list class="myClass">hello evryOne i am learning Document Object Model on you tube</list>
+            <list class="myClass">hello evryOne i am learning Document Object Model on you tube</list>
+        </ul>
     </div>
 </body>
 
