--- a/DOM/three.html
+++ b/DOM/three.html
@@ -12,6 +12,7 @@
 
 
 </body>
+<!-- we are creating an element on webpage with script -->
 <script>
     const div = document.createElement('div');
     console.log(div);
@@ -21,10 +22,10 @@
     div.style.backgroundColor = 'orange'
     div.style.padding = '15px'
     div.style.borderRadius = '14px'
-    div.innerText = "chai and code" //-> it put text on webpage
-        // const addText = document.createTextNode("chai and code") -> it add text
-        // div.appendChild(addText) -> it put text on webpage
-    document.body.appendChild(div);
+    div.innerText = "chai and code" //-> it put text on memory 
+        // // const addText = document.createTextNode("chai and code") -> it add text 
+        // // div.appendChild(addText) -> it put text on memory 
+    document.body.appendChild(div); // it will show text on webpage
 </script>
 
 
